// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CheckboxMultipleSelect ui horizontal: Component: CheckboxMultipleSelect => ui => horizontal 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <p
    className="text-muted"
  >
    <em>
      Please select your provinces
    </em>
  </p>
  <FormGroup
    check={true}
    inline={true}
    key="42"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={true}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
       
      admin@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={true}
    key="777"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
       
      coordinator@42.nl
    </Label>
  </FormGroup>
  <FormGroup
    check={true}
    inline={true}
    key="1337"
    tag="div"
  >
    <Label
      check={true}
      tag="label"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Input
        checked={false}
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
       
      user@42.nl
    </Label>
  </FormGroup>
  Some error
</FormGroup>
`;

exports[`Component: CheckboxMultipleSelect ui loading: Component: CheckboxMultipleSelect => ui => loading 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <p
    className="text-muted"
  >
    <em>
      Please select your provinces
    </em>
  </p>
  <Loading>
    Loading...
  </Loading>
  Some error
</FormGroup>
`;

exports[`Component: CheckboxMultipleSelect ui with value: Component: CheckboxMultipleSelect => ui => with value 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <p
    className="text-muted"
  >
    <em>
      Please select your provinces
    </em>
  </p>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      key="42"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={true}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          admin@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="777"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          coordinator@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="1337"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          user@42.nl
        </Label>
      </FormGroup>
    </Col>
  </Row>
  Some error
</FormGroup>
`;

exports[`Component: CheckboxMultipleSelect ui without label: Component: CheckboxMultipleSelect => ui => without label 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <p
    className="text-muted"
  >
    <em>
      Please select your provinces
    </em>
  </p>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      key="42"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={true}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          admin@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="777"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          coordinator@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="1337"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          user@42.nl
        </Label>
      </FormGroup>
    </Col>
  </Row>
  Some error
</FormGroup>
`;

exports[`Component: CheckboxMultipleSelect ui without placeholder: Component: CheckboxMultipleSelect => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="subject"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Subject
  </Label>
  <Row
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Col
      key="42"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={true}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          admin@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="777"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          coordinator@42.nl
        </Label>
      </FormGroup>
    </Col>
    <Col
      key="1337"
      style={
        Object {
          "maxWidth": "100%",
          "width": "300px",
        }
      }
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
      xs="auto"
    >
      <FormGroup
        check={true}
        tag="div"
      >
        <Label
          check={true}
          tag="label"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <Input
            checked={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
           
          user@42.nl
        </Label>
      </FormGroup>
    </Col>
  </Row>
  Some error
</FormGroup>
`;
